hphp/hack/test/typecheck/like_types/dynamic_coercion/constructor.php.like_types.exp
File "constructor.php", line 8, characters 9-10:
Invalid argument (Typing[4110])
File "constructor.php", line 4, characters 31-33:
Expected int
File "constructor.php", line 7, characters 12-18:
But got dynamic
