hphp/hack/test/typecheck/like_types/dynamic_coercion/constructor.php
<?hh // partial

class C {
  public function __construct(int $i) {}
}

function f(dynamic $d): void {
  new C($d);
}
